--- a/src/templates/character_stats_block.jade
+++ b/src/templates/character_stats_block.jade
@@ -1,14 +1,17 @@
-div.row
-  div.container.col-md-4
-    div.abilityList
-      table.table
-        thead
-          td stat
-          td value
-          td modifier
-        tbody
-          tr.noPadding(ng-repeat="ability in char.abilities track by ability.name")
-            td {{ ability.name }}
-            td
-              input(id="ability.name" ng-model="ability.score" ng-change="abilityScoreUpdate()")
-            td {{ ability.modifier }}
+div.container.col-md-4
+  div.abilityList
+    table.table
+      thead
+        td
+          label stat
+        td
+          label value
+        td
+          label modifier
+      tbody
+        tr.noPadding(ng-repeat="ability in char.abilities track by ability.name")
+          td
+            label {{ ability.name }}
+          td
+            input(id="ability.name" ng-model="ability.score" ng-change="abilityScoreUpdate()")
+          td {{ ability.modifier }}
