--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -1,7 +1,7 @@
 .center-col
   float: none
   margin: 0 auto
-  width: 60%
+  width: 80%
 
 // INPUT OVERRIDES
 $inputPadding: 1px
@@ -12,9 +12,6 @@ body
     outline: none !important
     border: 1px solid #eee
     padding: $inputPadding
-  label
-    font-size: medium
-    color: #777
 
 
 // Things to fuck up bootstrap
@@ -30,3 +27,13 @@ body
 
 label
   text-transform: capitalize
+  font-size: medium
+  color: #777
+
+.panel
+  border: 1px solid
+
+.panel
+  button
+    margin-top: 10px
+    margin-bottom: 10px
