--- a/src/templates/character_stats_block.jade
+++ b/src/templates/character_stats_block.jade
@@ -13,7 +13,6 @@ div.characterStatsBlock
           tr.noPadding(ng-repeat="ability in char.abilities track by ability.name")
             td
               label {{ ability.name }}
-            td
-              input(id="ability.name" style="width:50px" ng-model="ability.score" ng-change="abilityScoreUpdate()")
+            td {{ ability.score }}
             td {{ ability.modifier }}
     button.btn.btn-sm.btn-warning Edit
