--- a/src/index.jade
+++ b/src/index.jade
@@ -8,7 +8,8 @@ html(lang="en", ng-app="dndCharacterSheets", ng-controller="CharSheet")
     script(src="/third-party/angular.js")
     script(src="/js/main.js")
     link(rel="stylesheet", type="text/css", href="/css/styles.css")
-
+    script(src="/third-party/xeditable.min.js")
+    link(rel="stylesheet", type="text/css", href="/third-party/xeditable.css")
   body
     div.container-fluid
       div.row
