--- a/src/templates/character_stats_block.jade
+++ b/src/templates/character_stats_block.jade
@@ -1,18 +1,30 @@
 div.characterStatsBlock
   div.col-sm-5.panel
     div.abilityList
-      table.table
-        thead
-          td
-            label stat
-          td
-            label value
-          td
-            label modifier
-        tbody
-          tr.noPadding(ng-repeat="ability in char.abilities track by ability.name")
+      form(editable-form, name="characterStatsForm", onaftersave="updateSheet()")
+        table.table
+          thead
             td
-              label {{ ability.name }}
-            td {{ ability.score }}
-            td {{ ability.modifier }}
-    button.btn.btn-sm.btn-warning Edit
+              label stat
+            td
+              label value
+            td
+              label modifier
+          tbody
+            tr.noPadding(ng-repeat="ability in char.abilities track by ability.name")
+              td
+                label
+                  span(editable-text="ability.name", e-form="tableform") {{ ability.name || 'empty' }}
+              td
+                span(editable-text="ability.score", e-name="score", onbeforesave="fun()", e-required) {{ ability.score || 'empty' }}
+              td {{ ability.modifier }}
+              td
+                button(type="button" ng-show="tableform.$visible" ng-click="deleteUser(user.id)" class="btn btn-danger pull-right") Del
+
+
+          div(class="btn-edit")
+            button(type="button", class="btn btn-default", ng-show="!tableform.$visible", ng-click="tableform.$show()") edit
+          div(class="btn-form" ng-show="tableform.$visible")
+            button(type="button", ng-disabled="tableform.$waiting", ng-click="addUser()", class="btn btn-default pull-right") add row
+            button(type="submit", ng-disabled="tableform.$waiting", class="btn btn-primary") save
+            button(type="button", ng-disabled="tableform.$waiting", ng-click="tableform.$cancel()", class="btn btn-default") cancel
