Now using x-editable Refactored how stats are handled. Still no support for adding rows to modifiers for stats.

--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -22,6 +22,13 @@ body
   padding: $inputPadding
   margin: $inputMargin
 
+//h1
+//h2
+h3
+  margin-top: 10px
+//h4
+//h5
+
 .row
   margin-top: 10px
 
@@ -30,10 +37,8 @@ label
   font-size: medium
   color: #777
 
-.panel
+.Panel
   border: 1px solid
-
-.panel
   button
     margin-top: 10px
     margin-bottom: 10px
