--- a/src/templates/character_saves_block.jade
+++ b/src/templates/character_saves_block.jade
@@ -1,28 +1,25 @@
 div.characterSavesBlock
-  div.col-sm-6.panel
-    table.table
-      thead
-        td
-          label Save
-        td
-          label Total
-        td
-          label Base
-        td
-          label Ability Mod
-        td
-          label Misc Mod
-      tbody
-        tr.noPadding(ng-repeat="save in char.saves track by save.name")
-          // td Save
-          td
-            label {{ save.name }}
-          // td Total
-          td {{ save.total }}
-          // td Base Save
-          td {{ save.base }}
-          // td Ability Modifier
-          td(id="save.ability") {{ getAbilityModifier(save.ability) }}
-          // composite modifiers
-          td {{ getSaveCompositeModifier(save.modifiers) }}
-    button.btn.btn-sm.btn-warning Edit
+  div.col-sm-6.Panel
+    h3 Saves
+    form(editable-form name="characterSavesForm" onaftersave="updateSaves()" oncancel="cancel()")
+      div.col-sm-4(ng-repeat="save in char.saves")
+        // TODO: Fix styling
+        div
+          label(style="display: inline")
+            // inline here so that we can do the pull-right and line up the numbers
+            h4(style="color: black; margin-top: 10px") {{ save.name }}
+              span.pull-right {{ save.total }}
+        div
+          label Base Save
+          span.pull-right(editable-text="save.base" e-name="base") {{ save.base }}
+        div
+          label Ability Modifier
+          // (style="margin-left: 10px;" editable-text="save.ability" e-name="abilityMod")
+
+          span.pull-right(style="margin-left: 10px;" editable-text="save.ability" e-name="abilityMod") {{ getAbilityModifier(save.ability) }}
+        div
+          div(ng-repeat="mod in save.modifiers")
+            label {{ mod.type }}
+            span.pull-right(editable-text="mod.modifier" e-name="mod.type") {{ mod.modifier }}
+      - var formName = 'characterSavesForm'
+      include ./edit_button_block.jade
