--- a/src/templates/character_stats_block.jade
+++ b/src/templates/character_stats_block.jade
@@ -1,15 +1,16 @@
 div.characterStatsBlock
-  div.col-sm-5.panel
+  div.col-sm-5.Panel
+    h3 Stats
     div.abilityList
       form(editable-form, name="characterStatsForm", onaftersave="updateStats()", oncancel="cancel()")
-        table.table
+        table.table.table-condensed
           thead
             td
-              label stat
+              h4 Stat
             td
-              label value
+              h4 Value
             td
-              label modifier
+              h4 Modifier
           tbody
             tr.noPadding(ng-repeat="ability in char.abilities")
               td
@@ -17,10 +18,5 @@ div.characterStatsBlock
               td
                 span(editable-text="ability.score", e-form="characterStatsForm", e-name="score") {{ ability.score || 'empty' }}
               td {{ ability.modifier }}
-          div(class="btn-edit")
-            button(type="button", class="btn btn-default", ng-show="!characterStatsForm.$visible", ng-click="characterStatsForm.$show()") edit
-          div(class="btn-form" ng-show="characterStatsForm.$visible")
-            // keeping for reference for next block
-            // button(type="button", ng-disabled="characterStatsForm.$waiting", ng-click="addUser()", class="btn btn-default pull-right") add row
-            button(type="submit", ng-disabled="characterStatsForm.$waiting", class="btn btn-primary") done
-            button(type="button", ng-disabled="characterStatsForm.$waiting", ng-click="characterStatsForm.$cancel()", class="btn btn-default") cancel
+        - var formName = 'characterStatsForm'
+        include ./edit_button_block.jade
