removed computed values from data. made controllers for each of the sections that have data that gets calculated. created a service to serve data.

--- a/src/index.jade
+++ b/src/index.jade
@@ -1,12 +1,12 @@
 doctype html
-html(lang="en", ng-app="dndCharacterSheets", ng-controller="CharSheet")
+html(lang="en", ng-app="dndCharacterSheets", ng-controller="DndController")
   head
     title(ng-bind-template="{{ charName }}") Character Template
     link(rel="stylesheet", type="text/css", href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
     script(src="//code.jquery.com/jquery-1.11.0.min.js")
     script(src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
     script(src="/third-party/angular.js")
-    script(src="/js/main.js")
+    script(src="/js/app.js")
     link(rel="stylesheet", type="text/css", href="/css/styles.css")
     script(src="/third-party/xeditable.min.js")
     link(rel="stylesheet", type="text/css", href="/third-party/xeditable.css")
